# SentinelAI

./: .gitignore  GEMINI_MIGRATION.md  PLAN.md  README.md  mcp-config.json
backend/: .env.example  GEMINI_CONFIG.md  backend_err.txt  config.py  database.py  final_log.txt  log_try2.txt  main.py  pyproject.toml  pytest_log.txt  test_output.txt
backend/ai_engine/: client.py  finetune_dataset.jsonl  prompts.py  rag_pipeline.py
backend/middleware/: auth.py
backend/models/: db_models.py  onboarding.py  university.py  user.py
backend/routers/: __init__.py  counsellor.py  onboarding.py  universities.py  user.py
backend/services/: gemini_client.py  groq_client.py  onboarding.py  shortlist.py  universities.py
backend/tests/: test_ai_engine.py  test_database.py  test_main.py
directives/: backend_auth.md  backend_counsellor.md  backend_onboarding.md  backend_universities.md  frontend_auth.md
frontend/: .env.example  build_err.txt  build_log.txt  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  template.tsx
frontend/src/app/auth/callback/: route.ts
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/signup/: page.tsx
frontend/src/app/counsellor/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/guidance/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/universities/: page.tsx
frontend/src/components/: Navbar.tsx
frontend/src/lib/supabase/: middleware.ts
